Add logic for wages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,3 +27,15 @@
   height: 90vh;
   overflow-y: scroll;
 }
+
+.column-sec {
+  margin-top: 3%;
+  border: gray solid 1px;
+  border-radius: 3%;
+}
+
+.input-wage {
+  height: inherit !important;
+  width: inherit !important;
+  margin: 0 !important;
+}
