--- a/app/views/wages/show.html.erb
+++ b/app/views/wages/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @wage.Company_Name %>
+  <%= @wage.company_name %>
 </p>
 
 <p>
   <strong>Farm_Name:</strong>
-  <%= @wage.Farm_Name %>
+  <%= @wage.farm_name %>
 </p>
 
 <p>
@@ -20,20 +20,7 @@
   <%= @wage.empoyee_number %>
 </p>
 
-<p>
-  <strong>daily_rate:</strong>
-  <%= @wage.daily_rate %>
-</p>
 
-<p>
-  <strong>worker_status:</strong>
-  <%= @wage.worker_status %>
-</p>
-
-<p>
-  <strong>Pro number:</strong>
-  <%= @wage.Pro_Number %>
-</p>
 
 <p>
   <strong>User:</strong>
