--- a/app/views/wages/new.html.erb
+++ b/app/views/wages/new.html.erb
@@ -169,7 +169,7 @@
       <%= form.text_field :employee_name, value: deduction.employee_name, type: :hidden %>
       <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
       <div class="actions has-text-centered">
-        <%= form.submit "Create Wage", class:"button is-success" %>
+        <%= form.submit "Create New Employee Wage", class:"button is-success" %>
       </div>
     <% end %>
   </div>
