--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <div class="columns">
 
       <%if user_signed_in? %>
-        <% if current_user.email == 'tongoonamujera@gmail.com' %>
+        <% if current_user.email == 'tongoonamujera@gmail.com' || current_user.email == 'tntmukotekwa@gmail.com' %>
           <div class="column is-3 has-background-black">
             <%= render 'layouts/sidebar'%>
           </div>
