--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -42,7 +42,7 @@
   <div class="field">
     <%= form.label :Type, class:"label" %>
     <div class="control">
-      <%= form.text_field :Type, class:"input" %>
+      <%= form.select :Type, ['Fertiliser', 'Chemical', 'Fuel', 'Other'], class:"input" %>
     </div>
   </div>
 
