Add input_stores_usage model

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -153,7 +153,13 @@
     </div>
     <div class="columns is-centered">
       <div class="column is-11 my-2 py-1 side-bar">
-        <%= link_to 'Stores', stores_path, class:"has-text-white" %>
+        <%= link_to 'Input Stores', stores_path, class:"has-text-white" %>
+      </div>
+    </div>
+
+    <div class="columns is-centered">
+      <div class="column is-11 my-2 py-1 side-bar">
+        <%= link_to 'Input Stores Usage', input_stores_usages_path, class:"has-text-white" %>
       </div>
     </div>
 
