--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -1,97 +1,106 @@
-<%= form_with(model: store, local: true) do |form| %>
-  <% if store.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(store.errors.count, "error") %> prohibited this store from being saved:</h2>
+<div class="box">
+  <%= form_with(model: store, local: true) do |form| %>
+    <% if store.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(store.errors.count, "error") %> prohibited this store from being saved:</h2>
 
-      <ul>
-        <% store.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+        <ul>
+          <% store.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= form.label :Company_Name, class:"label" %>
+      <div class="control">
+        <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :Date, class:"label" %>
+      <div class="control">
+        <%= form.date_select :Date, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :Season, class:"label" %>
+      <div class="control">
+        <%= form.text_field :Season, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :Farm_Name, class:"label" %>
+      <div class="control">
+        <%= form.text_field :Farm_Name, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :Type, class:"label" %>
+      <div class="control">
+        <%= form.select :Type, ['Fertiliser', 'Chemical', 'Fuel', 'Other'], class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :Input_Name, class:"label" %>
+      <div class="control"></div>
+      <%= form.text_field :Input_Name, class:"input" %>
+    </div>
+
+    <div class="field">
+      <%= form.label :Quantity, class:"label" %>
+      <div class="control">
+        <%= form.text_field :Quantity, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :top_up, class:"label" %>
+      <div class="control">
+        <%= form.text_field :top_up, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :Unit, class:"label" %>
+      <div class="control">
+        <%= form.text_field :Unit, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :Unit_Price, class:"label" %>
+      <div class="control">
+        <%= form.text_field :Unit_Price, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :Total_Amount, class:"label" %>
+      <div class="control">
+        <%= form.text_field :Total_Amount, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :Pro_Number, class:"label" %>
+      <div class="control">
+        <%= form.text_field :Pro_Number, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit class:"button is-success" %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :Company_Name, class:"label" %>
-    <div class="control">
-      <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.label :Date, class:"label" %>
-    <div class="control">
-      <%= form.date_select :Date, class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.label :Season, class:"label" %>
-    <div class="control">
-      <%= form.text_field :Season, class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.label :Farm_Name, class:"label" %>
-    <div class="control">
-      <%= form.text_field :Farm_Name, class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.label :Type, class:"label" %>
-    <div class="control">
-      <%= form.select :Type, ['Fertiliser', 'Chemical', 'Fuel', 'Other'], class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.label :Input_Name, class:"label" %>
-    <div class="control"></div>
-    <%= form.text_field :Input_Name, class:"input" %>
-  </div>
-
-  <div class="field">
-    <%= form.label :Quantity, class:"label" %>
-    <div class="control">
-      <%= form.text_field :Quantity, class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.label :Unit, class:"label" %>
-    <div class="control">
-      <%= form.text_field :Unit, class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.label :Unit_Price, class:"label" %>
-    <div class="control">
-      <%= form.text_field :Unit_Price, class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.label :Total_Amount, class:"label" %>
-    <div class="control">
-      <%= form.text_field :Total_Amount, class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.label :Pro_Number, class:"label" %>
-    <div class="control">
-      <%= form.text_field :Pro_Number, class:"input" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit class:"button is-success" %>
-  </div>
-<% end %>
+</div>
