--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -13,50 +13,50 @@
     <% end %>
 
     <div class="field">
-      <%= form.label :Company_Name, class:"label" %>
+      <%= form.label :company_name, class:"label" %>
       <div class="control">
-        <%= form.select :Company_Name, [current_user.Company_Name], class:"my-3" %>
+        <%= form.select :company_name, [current_user.Company_Name], class:"my-3" %>
       </div>
     </div>
 
     <div class="field">
-      <%= form.label :Date, class:"label" %>
+      <%= form.label :date, class:"label" %>
       <div class="control">
-        <%= form.date_select :Date, class:"input" %>
+        <%= form.date_select :date, class:"input" %>
       </div>
     </div>
 
     <div class="field">
-      <%= form.label :Season, class:"label" %>
+      <%= form.label :season, class:"label" %>
       <div class="control">
-        <%= form.text_field :Season, class:"input" %>
+        <%= form.text_field :season, class:"input" %>
       </div>
     </div>
 
     <div class="field">
-      <%= form.label :Farm_Name, class:"label" %>
+      <%= form.label :farm_name, class:"label" %>
       <div class="control">
-        <%= form.text_field :Farm_Name, class:"input" %>
+        <%= form.text_field :farm_name, class:"input" %>
       </div>
     </div>
 
     <div class="field">
-      <%= form.label :Type, class:"label" %>
+      <%= form.label :type, class:"label" %>
       <div class="control">
-        <%= form.select :Type, ['Fertiliser', 'Chemical', 'Fuel', 'Other'], class:"input" %>
+        <%= form.select :types, ['Fertiliser', 'Chemical', 'Fuel', 'Other'], class:"input" %>
       </div>
     </div>
 
     <div class="field">
-      <%= form.label :Input_Name, class:"label" %>
+      <%= form.label :input_name, class:"label" %>
       <div class="control"></div>
-      <%= form.text_field :Input_Name, class:"input" %>
+      <%= form.text_field :input_name, class:"input" %>
     </div>
 
     <div class="field">
-      <%= form.label :Quantity, class:"label" %>
+      <%= form.label :quantity, class:"label" %>
       <div class="control">
-        <%= form.text_field :Quantity, class:"input" %>
+        <%= form.text_field :quantity, class:"input" %>
       </div>
     </div>
 
@@ -68,30 +68,30 @@
     </div>
 
     <div class="field">
-      <%= form.label :Unit, class:"label" %>
+      <%= form.label :unit, class:"label" %>
       <div class="control">
-        <%= form.text_field :Unit, class:"input" %>
+        <%= form.text_field :unit, class:"input" %>
       </div>
     </div>
 
     <div class="field">
-      <%= form.label :Unit_Price, class:"label" %>
+      <%= form.label :unit_price, class:"label" %>
       <div class="control">
-        <%= form.text_field :Unit_Price, class:"input" %>
+        <%= form.text_field :unit_price, class:"input" %>
       </div>
     </div>
 
     <div class="field">
-      <%= form.label :Total_Amount, class:"label" %>
+      <%= form.label :total_amount, class:"label" %>
       <div class="control">
-        <%= form.text_field :Total_Amount, class:"input" %>
+        <%= form.text_field :total_amount, class:"input" %>
       </div>
     </div>
 
     <div class="field">
-      <%= form.label :Pro_Number, class:"label" %>
+      <%= form.label :pro_number, class:"label" %>
       <div class="control">
-        <%= form.text_field :Pro_Number, class:"input" %>
+        <%= form.text_field :pro_number, class:"input" %>
       </div>
     </div>
 
