--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -24,17 +24,20 @@
   <tbody>
     <% @stores.each do |store| %>
       <tr>
-        <td><%= store.Company_Name %></td>
-        <td><%= store.Date %></td>
-        <td><%= store.Season %></td>
-        <td><%= store.Farm_Name %></td>
-        <td><%= store.Type %></td>
-        <td><%= store.Input_Name %></td>
-        <td><%= store.Quantity %></td>
-        <td><%= store.Unit %></td>
-        <td><%= store.Unit_Price %></td>
-        <td><%= store.Total_Amount %></td>
-        <td><%= store.Pro_Number %></td>
+        <td><%= store.company_name %></td>
+        <td><%= store.date %></td>
+        <td><%= store.season %></td>
+        <td><%= store.farm_name %></td>
+        <td><%= store.types %></td>
+        <td><%= store.input_name %></td>
+        <td>
+          <%= store.quantity %>
+          <%= quantity(store.types) %>
+        </td>
+        <td><%= store.unit %></td>
+        <td><%= store.unit_price %></td>
+        <td><%= store.total_amount %></td>
+        <td><%= store.pro_number %></td>
         <td><%= store.user_id %></td>
         <td><%= link_to 'Show', store %></td>
         <td><%= link_to 'Edit', edit_store_path(store) %></td>
