--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -2,57 +2,57 @@
 
 <p>
   <strong>Company name:</strong>
-  <%= @store.Company_Name %>
+  <%= @store.company_name %>
 </p>
 
 <p>
   <strong>Date:</strong>
-  <%= @store.Date %>
+  <%= @store.date %>
 </p>
 
 <p>
   <strong>Season:</strong>
-  <%= @store.Season %>
+  <%= @store.season %>
 </p>
 
 <p>
   <strong>Farm name:</strong>
-  <%= @store.Farm_Name %>
+  <%= @store.farm_name %>
 </p>
 
 <p>
   <strong>Type:</strong>
-  <%= @store.Type %>
+  <%= @store.types %>
 </p>
 
 <p>
   <strong>Input name:</strong>
-  <%= @store.Input_Name %>
+  <%= @store.input_name %>
 </p>
 
 <p>
   <strong>Quantity:</strong>
-  <%= @store.Quantity %>
+  <%= @store.quantity %>
 </p>
 
 <p>
   <strong>Unit:</strong>
-  <%= @store.Unit %>
+  <%= @store.unit %>
 </p>
 
 <p>
   <strong>Unit price:</strong>
-  <%= @store.Unit_Price %>
+  <%= @store.unit_price %>
 </p>
 
 <p>
   <strong>Total amount:</strong>
-  <%= @store.Total_Amount %>
+  <%= @store.total_amount %>
 </p>
 
 <p>
   <strong>Pro number:</strong>
-  <%= @store.Pro_Number %>
+  <%= @store.pro_number %>
 </p>
 
 <p>
