--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -54,6 +54,13 @@
     </div>
 
     <div class="field">
+      <%= form.label :top_up_unit_price, class:"label" %>
+      <div class="control">
+        <%= form.text_field :top_up_unit_price, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
       <div class="control">
         <%= form.text_field :unit, type: :hidden %>
       </div>
